✨ Optimize Modrinth loader priority handling and reorder supported loaders.
Before Plugins which have specific build's for multiple loaders were not really supported. PluginUpdater just choosed the first release Modrinth returned.

After these changes it prefers the first loader entry -> paper over spigot.

Improves #94.